feat: add place rating field
