# src/modules/places/useCases/createRestaurant/CreateRestaurantController.ts
@@ -5,8 +5,16 @@ import { CreateRestaurantUseCase } from './CreateRestaurantUseCase';
 
 class CreateRestaurantController {
   async handle(req: Request, res: Response): Promise<Response> {
-    const { address, coverImage, description, lat, lng, logoImage, name } =
-      req.body;
+    const {
+      address,
+      coverImage,
+      description,
+      lat,
+      lng,
+      logoImage,
+      name,
+      rating,
+    } = req.body;
 
     const createRestaurantUseCase = container.resolve(CreateRestaurantUseCase);
 
@@ -18,6 +26,7 @@ class CreateRestaurantController {
       lng,
       logoImage,
       name,
+      rating,
     });
 
     return res.status(201).send();
